[gd_scene load_steps=5 format=3 uid="uid://c04fhudmh8rjq"]

[ext_resource type="Texture2D" uid="uid://bb8po0vxe4vka" path="res://Sprites/Game_Background.webp" id="1_5u2yv"]
[ext_resource type="Script" path="res://Game/main_menu.gd" id="1_h2boh"]
[ext_resource type="PackedScene" uid="uid://cstukqml3y23j" path="res://Questions Panel/answer_button.tscn" id="2_dyv6a"]
[ext_resource type="AudioStream" uid="uid://bu5mpe7r0ox5j" path="res://Audio/Menu_Music Timed in the Dark.wav" id="4_oj0v8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2boh")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_oj0v8")
volume_db = -15.0
pitch_scale = 0.8
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.450649, 0.450648, 0.450648, 1)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -36.0
offset_right = 1358.0
offset_bottom = 757.0
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_5u2yv")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 356.0
offset_top = 91.0
offset_right = 878.0
offset_bottom = 472.0
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.421
anchor_top = -0.312
anchor_right = 1.433
anchor_bottom = 0.218
offset_left = -11.238
offset_top = -0.127998
offset_right = -9.02606
offset_bottom = -0.0580063
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.516557, 0.125011, 0.110425, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 11
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "[font_size={64}[outline_color={code/name}][outline_size={8}][pulse][wave][b][font=Font/BaroqueTextJF Regular.ttf][center]
Timed In The Dark 
[/center][/font][/b][/wave][/pulse][/outline_size]"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.904
anchor_top = 1.341
anchor_right = 1.808
anchor_bottom = 1.609
offset_left = 0.111938
offset_top = 0.07901
offset_right = 0.223938
offset_bottom = -0.0290527
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.516557, 0.125011, 0.110425, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 13
theme_override_constants/outline_size = 12
bbcode_enabled = true
text = "[font_size={32}[outline_color={code/name}][outline_size={9}][pulse][wave][b][font=Font/Georgia-zEPX.otf][center]
How  Many  Souls  Shall You  Collect?
[/center][/font][/b][/wave][/pulse][/outline_size]"
fit_content = true
tab_size = 24

[node name="RichTextLabel3" type="RichTextLabel" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.663
anchor_top = 1.244
anchor_right = -0.063
anchor_bottom = 1.633
offset_left = 0.0860291
offset_top = 0.0359802
offset_right = -0.113998
offset_bottom = -0.173035
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.516557, 0.125011, 0.110425, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 12
bbcode_enabled = true
text = "[font_size={35}{tornado}[outline_color={code/name}][outline_size={9}][pulse][tornado][b][font=Font/Georgia-zEPX.otf][center]
Artist: Amethyst Morris
Developer: ThaAftrPartie
[/center][/font][/b][/tornado][/pulse][/outline_size]"
fit_content = true
autowrap_mode = 0
tab_size = 24

[node name="ExitGame" parent="." instance=ExtResource("2_dyv6a")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 447.0
offset_top = 473.0
offset_right = 748.0
offset_bottom = 620.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_group_ = true

[node name="ColorRect" parent="ExitGame" index="1"]
visible = false

[node name="StartGame" parent="." instance=ExtResource("2_dyv6a")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = 447.0
offset_top = 197.0
offset_right = 748.0
offset_bottom = 343.0
grow_vertical = 0
theme_override_constants/outline_size = 1
metadata/_edit_group_ = true

[node name="ColorRect" parent="StartGame" index="1"]
visible = false

[connection signal="pressed" from="ExitGame" to="." method="_on_answer_button_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_answer_button_2_pressed"]

[editable path="ExitGame"]
[editable path="StartGame"]
